# ecstasy-of-gold

./: CMakeLists.txt  LICENSE  README.md  package.json  run_build.sh
cmake/: FindAllegro.cmake
source/: main.c
src/: main.c
